# MULTI-evolve

./: .gitignore  app.py  flake.nix  main.py  pyproject.toml  setup.py
multievolve/: __init__.py
multievolve/featurizers/: __init__.py  ankh_featurizers.py  base_featurizers.py  combinatorial_featurizers.py  esm_featurizers.py  model_choices.py  model_locations.py  msa_featurizers.py  prott5_featurizers.py  unirep_featurizers.py  zeroshot_featurizers.py
multievolve/predictors/: __init__.py  base_regressors.py  gaussian_process_regressors.py  neural_net_regressors.py
multievolve/proposers/: __init__.py  base_proposers.py
multievolve/splitters/: __init__.py  base_splitters.py
multievolve/utils/: __init__.py  benchmark_utils.py  cache_utils.py  cloning_utils.py  data_utils.py  featurizer_utils.py  other_utils.py  zeroshot_utils.py
nix/: shell.nix
notebooks/benchmark/: multievolve_hyperparameter_tuning.py
notebooks/examples/: Part_1_introduction.ipynb  Part_2_comparing_multiple_models.ipynb  featurizers.ipynb  splitters.ipynb  zeroshot.ipynb
scripts/: p1_train.py  p2_propose.py  p3_assembly_design.py  plm_zeroshot_ensemble.py
