[project]
name = "MULTI-evolve"
version = "0.1.0"
description = "MULTI-evolve: model-guided, universal, targeted installation of multi-mutants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch==2.6.0",
  "numpy",
  "tqdm",
  "pandas>=2.2",
  "matplotlib",
  "seaborn>=0.13",
  "scipy>=1.15",
  "biopython>=1.85",
  "scikit-learn>=1.6",
  "wandb>=0.19",
  "Levenshtein",
  "streamlit>=1.45",
  "fair-esm",
  "biotite>=1.6.0",
  "ankh",
  "protobuf",
  "torch-geometric",
  "torch-cluster",
  "torch-scatter",
  "torch-sparse",
  "torch-spline-conv",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pyg-cu124"
url = "https://data.pyg.org/whl/torch-2.6.0+cu124.html"
format = "flat"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torch-cluster = { index = "pyg-cu124" }
torch-scatter = { index = "pyg-cu124" }
torch-sparse = { index = "pyg-cu124" }
torch-spline-conv = { index = "pyg-cu124" }

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"
